# reg-cli

./: .babelrc  .flowconfig  .gitignore  .npmignore  .prettierrc  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.config.ts  docker-compose.jaeger.yml  docker-compose.yml  fixture.html  index.html  jaeger-test.js  jaeger-wasm-perf-test.js  jaeger-wasm-test.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.ts  reg-cli-jaeger-test.js  reg.json  reg.wasm  regconfig.json  rust-toolchain.toml  test.js  tsconfig.json  tsdown.config.ts  webpack.config.js  worker.ts
.cargo/: config.toml
.circleci/: config.yml
.github/: coronarium.yml  sakimori.yml
.github/workflows/: ci.yml  deploy-sample-report.yml
bench/: .gitignore  README.md  RESULTS.md  export-traces.sh  generate.sh  run.sh
bench/viz/: compare.html  index.html
core/: Cargo.toml
core/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: simple.rs
crates/core/src/: dir.rs  lib.rs  main.rs  report.rs
crates/reg_cli/: Cargo.toml  README.md
crates/reg_cli/src/: main.rs
crates/reg_core/: .gitignore  Cargo.toml
crates/reg_core/benches/: run.rs
crates/reg_core/src/: dir.rs  lib.rs  report.rs  tracing_layer.rs
decls/: cli-spinner.js  cross-spawn.js  deps.js  glob.js  image-diff.js  img-diff.js  mkdirp.js  mustache.js  x-img-diff-js.js
docs/: bireki-web-front  detector.wasm  index.html  sample.html  sample.json  worker.js
flow-typed/npm/: avaron_vx.x.x.js  babel-cli_vx.x.x.js  babel-loader_vx.x.x.js  babel-plugin-transform-es2015-block-scoping_vx.x.x.js  babel-preset-es2015_vx.x.x.js  babel-preset-es2016_vx.x.x.js  babel-preset-es2017_vx.x.x.js  babel-preset-stage-2_vx.x.x.js  bluebird_v3.x.x.js  chalk_vx.x.x.js  cli-spinner_vx.x.x.js  copyfiles_vx.x.x.js  cross-spawn_vx.x.x.js  css-loader_vx.x.x.js  husky_vx.x.x.js  img-diff-js_vx.x.x.js  make-dir_vx.x.x.js  md5-file_vx.x.x.js  meow_v3.x.x.js  mustache_vx.x.x.js  nightmare_vx.x.x.js  reg-keygen-git-hash-plugin_vx.x.x.js  reg-notify-github-plugin_vx.x.x.js  reg-publish-s3-plugin_vx.x.x.js  reg-suit_vx.x.x.js  require-extension-hooks-babel_vx.x.x.js  require-extension-hooks-vue_vx.x.x.js  require-extension-hooks_vx.x.x.js  uglify-js_vx.x.x.js  uglifyjs-webpack-plugin_vx.x.x.js  url-loader_vx.x.x.js  vue-lazyload_vx.x.x.js  vue-loader_vx.x.x.js  vue-template-compiler_vx.x.x.js  vue-thin-modal_vx.x.x.js  vue_vx.x.x.js  webpack-dev-server_vx.x.x.js  webpack_vx.x.x.js  x-img-diff-js_vx.x.x.js
js/: .gitignore  build.config.ts  cli.ts  entry.js  entry.ts  index.js  index.ts  junit.ts  package.json  pnpm-lock.yaml  proxy.js  reg.wasm  reg3.wasm  tracing.ts  utils.ts  worker.js  worker.mts  worker.ts  ximgdiff.ts
js/test/: cli.test.mjs  library.test.mjs
patches/: @tybys__wasm-util.patch
report/: .gitignore  index.html  worker.js
report/src/: App.vue  app.vue  main.js  worker-client.js  worker-main.js  worker.js
report/src/detector-wrapper/: module.js  util.js
report/src/styles/: common.css
report/src/views/: CaptureImage.Vue  CaptureImage.vue  CaptureModal.Vue  CaptureModal.vue  ComparisonModal.vue  ComparisonModeSwitcher.vue  DiffMarkingModal.vue  ItemDetails.vue  ItemSummaries.vue  SampleComp.vue
report/src/views/comparison/: BlendComparison.vue  Markers.vue  SideBySideComparison.vue  SlideComparison.vue  ToggleComparison.vue
report/src/worker/: module.js
resource/: reg.json
sample/: detector.wasm  index.html  reg.json  worker.js
scripts/: build-ui.sh  build-wasm.sh  release.sh  stage-assets.mjs
src/: cli.js  cli.ts  diff.js  entry.ts  icon.js  image-finder.js  index.js  index.ts  log.js  process-adaptor.js  progress.ts  proxy.ts  report-simple.js  report.js  runner.ts  tracing.js  tracing.ts  utils.ts  worker.ts  ximgdiff.ts
template/: styles.css  template.html  worker_pre.js
test/: cli.test.js  cli.test.mjs  library.test.mjs  screenshot.js  test.js
test/helpers/: get-instance.js  setup.js
test/report/: CaptureImage.test.js  CaptureModal.test.js  ItemDetails.test.js  ItemSummaries.test.js
wasi-sdk-24.0/lib/: libLLVM-18-wasi-sdk.dylib
wasi-sdk-24.0/share/wasi-sysroot/include/wasm32-wasip2/: __wasi_snapshot.h
wasi-sdk-24.0/share/wasi-sysroot/lib/wasm32-wasi-threads/: libc.imports
(+3 files in other folders)
