[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-diff-rs = { git = "https://github.com/bokuweb/image-diff-rs.git" }
globmatch = "0.3"
rayon = "1.8"

[dev-dependencies]
rstest = "0.18.2"