[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-diff-rs = { git = "https://github.com/bokuweb/image-diff-rs.git" }
globmatch = "0.3"
rayon = "1.8"
mustache = "0.9.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
percent-encoding = "2.3.1"

[dev-dependencies]
rstest = "0.18.2"
