[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-diff-rs = { git = "https://github.com/bokuweb/image-diff-rs.git" }
glob = "0.3.1"
rayon = "1.8"
mustache = "0.9.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
bytes = "1.7.1"
urlencoding = "2.1.3"
pathdiff = "0.2.1"
path-clean = "1.0.1"

[dev-dependencies]
