[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reg_cli"
path = "src/main.rs"

[dependencies]
reg_core = { path = "../reg_core" }
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
jaeger = ["reg_core/jaeger", "tokio"]