[package]
name = "reg_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reg_core"
path = "src/lib.rs"

[dependencies]
image-diff-rs = { git = "https://github.com/bokuweb/image-diff-rs.git" }
glob = "0.3.1"
rayon = "1.8"
mustache = "0.9.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
bytes = "1.7.1"
urlencoding = "2.1.3"
pathdiff = "0.2.1"
path-clean = "1.0.1"
thiserror = "1.0"
url = "2.5.2"

# Jaeger tracing dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.18", optional = true }
opentelemetry = { version = "0.18", optional = true }
opentelemetry-jaeger = { version = "0.17", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", optional = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.18", optional = true, features = ["rt-tokio"] }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]

[features]
default = []
jaeger = ["tracing", "tracing-subscriber", "tracing-opentelemetry", "opentelemetry", "opentelemetry-jaeger", "opentelemetry-otlp", "opentelemetry_sdk", "tokio"]
